--- a/server/package.json
+++ b/server/package.json
@@ -19,24 +19,20 @@
     "@prisma/client": "^4.0.0",
     "@supabase/supabase-js": "^1.35.4",
     "bcryptjs": "^2.4.3",
-    "cookie-session": "^2.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.9",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "mongoose": "^6.2.9"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-session": "^2.0.44",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.0",
-    "@types/passport": "^1.0.9",
-    "@types/passport-google-oauth20": "^2.0.11",
     "concurrently": "^7.2.2",
     "nodemon": "^2.0.18",
     "prisma": "^4.0.0",
